--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -100,7 +100,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/rGPFPkUmPam6arT22ey8jWpKzL2.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Las Aventuras de Pinocho 1996</span>
-    <span class="hidden">Geppetto vive solo en una pequeña ciudad italiana. Su única compañía son las marionetas que fabrica con la madera de un bosque cercano, el mismo en el que un día talló en un tronco un corazón con su inicial y la de su amada Leone. Precisamente con ese tronco, Geppetto decide hacer su obra más bella: un muñeco tan perfecto que cobra vida y se convierte en su hijo, el travieso Pinocho.</span>
+    <span class="hidden">la aventura de pinocchio Geppetto vive solo en una pequeña ciudad italiana. Su única compañía son las marionetas que fabrica con la madera de un bosque cercano, el mismo en el que un día talló en un tronco un corazón con su inicial y la de su amada Leone. Precisamente con ese tronco, Geppetto decide hacer su obra más bella: un muñeco tan perfecto que cobra vida y se convierte en su hijo, el travieso Pinocho.</span>
   </a>
 </li>
 <!--FIN--><!-- Godzilla 2: El rey de los Monstruos -->
@@ -136,7 +136,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/u4z09YOXnOLyw2Vk0pBXbwGbMU4.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">La invasión de los astromonstruos 1965</span>
-    <span class="hidden">Los astronautas Glenn y Fuji investigan el Planeta X cuando encuentran alienígenas misteriosos llamado los Xiliens. Piden a la humanidad prestar Godzilla y Rodan para salvar su mundo del "Monstruo Cero". Mientras Glenn investiga, se enamora con la señorita Namikawa y descubre las verdaderas intenciones de los Xiliens.</span>
+    <span class="hidden">los monstruos invaden la tierra astro Los astronautas Glenn y Fuji investigan el Planeta X cuando encuentran alienígenas misteriosos llamado los Xiliens. Piden a la humanidad prestar Godzilla y Rodan para salvar su mundo del "Monstruo Cero". Mientras Glenn investiga, se enamora con la señorita Namikawa y descubre las verdaderas intenciones de los Xiliens.</span>
   </a>
 </li>
 <!--FIN--><!-- Godzilla contra Mothra -->
@@ -145,7 +145,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/qbW9Ww77rl4zsLR05ouERk3PXaL.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Godzilla contra Mothra 1964</span>
-    <span class="hidden">Periodistas Ichiro Sakai y Junko reportan en la secuelas de un tifón cuando un huevo gigantesco es encontrado y comprado por empresarios codiciosos. Las hadas de Mothra llegan para súplica por su regreso con la ayudada de los periodistas. Con sus solicitudes negados, Godzilla apparece en Nagoya, y la gente de la Isla Mothra debe decidir si están dispuestos a ayudar a Japón.</span>
+    <span class="hidden">los monstruos vs vs. versus moltra motra molthra Periodistas Ichiro Sakai y Junko reportan en la secuelas de un tifón cuando un huevo gigantesco es encontrado y comprado por empresarios codiciosos. Las hadas de Mothra llegan para súplica por su regreso con la ayudada de los periodistas. Con sus solicitudes negados, Godzilla apparece en Nagoya, y la gente de la Isla Mothra debe decidir si están dispuestos a ayudar a Japón.</span>
   </a>
 </li>
 <!--FIN--><!-- King Kong contra Godzilla -->
@@ -154,7 +154,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/m5x0lEpwN5m0VDvpdKeLESXspgf.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">King Kong contra Godzilla 1962</span>
-    <span class="hidden">Versión japonésa. Tako, el director de publicidad de Pacific Pharmaceuticals, está frustrado con los ratings de su programa patrocinado. Buscando una sensacion, ordena un expedición a la isla de Faro y captura a King Kong para usarlo como publicidad. Cuando Godzilla aparece, se genera un frenesí mediático que Tako busca de sacar provecho con el combate de lucha libre mas grande del mundo.</span>
+    <span class="hidden"> versus vs vs. Versión japonésa. Tako, el director de publicidad de Pacific Pharmaceuticals, está frustrado con los ratings de su programa patrocinado. Buscando una sensacion, ordena un expedición a la isla de Faro y captura a King Kong para usarlo como publicidad. Cuando Godzilla aparece, se genera un frenesí mediático que Tako busca de sacar provecho con el combate de lucha libre mas grande del mundo.</span>
   </a>
 </li>
 <!--FIN--><!-- Godzilla 1 -->
@@ -163,7 +163,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/mu4KeHb8GOjKbZGIeE4C5dXBx9B.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Godzilla 1 1954</span>
-    <span class="hidden">Un gigante monstruo lanzallamas aterroriza a Japón después de que una bomba atómica lo despierta luego de estar dormido durante varios siglos.</span>
+    <span class="hidden">japon bajo el terror de del monstruo Un gigante monstruo lanzallamas aterroriza a Japón después de que una bomba atómica lo despierta luego de estar dormido durante varios siglos.</span>
   </a>
 </li>
 <!--FIN--><!-- Godzilla y Kong: El nuevo imperio -->
@@ -172,7 +172,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/2YqZ6IyFk7menirwziJvfoVvSOh.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Godzilla y Kong: El nuevo imperio 2024</span>
-    <span class="hidden">Una aventura cinematográfica completamente nueva, que enfrentará al todopoderoso Kong y al temible Godzilla contra una colosal amenaza desconocida escondida dentro de nuestro mundo. La nueva y épica película profundizará en las historias de estos titanes, sus orígenes y los misterios de Isla Calavera y más allá, mientras descubre la batalla mítica que ayudó a forjar a estos seres extraordinarios y los unió a la humanidad para siempre.</span>
+    <span class="hidden">un Una aventura cinematográfica completamente nueva, que enfrentará al todopoderoso Kong y al temible Godzilla contra una colosal amenaza desconocida escondida dentro de nuestro mundo. La nueva y épica película profundizará en las historias de estos titanes, sus orígenes y los misterios de Isla Calavera y más allá, mientras descubre la batalla mítica que ayudó a forjar a estos seres extraordinarios y los unió a la humanidad para siempre.</span>
   </a>
 </li>
 <!--FIN--><!-- Shaolin Soccer -->
@@ -181,7 +181,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/gMqHA1CoURwncG1iKBukFtTCSrG.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Shaolin Soccer 2001</span>
-    <span class="hidden">Sing es un discipulo del Shaolin cuya ambición es popularizar el kung fu en la sociedad moderna. Un día se encontrará con Fung, antiguo futbolista fracasado. Ambos tendrán la idea de formar un equipo que mezcle fútbol con artes marciales.</span>
+    <span class="hidden">futbol foothball Sing es un discipulo del Shaolin cuya ambición es popularizar el kung fu en la sociedad moderna. Un día se encontrará con Fung, antiguo futbolista fracasado. Ambos tendrán la idea de formar un equipo que mezcle fútbol con artes marciales.</span>
   </a>
 </li>
 <!--FIN--><!-- Godzilla vs Kong -->
