--- a/Categorias/accion/index.html
+++ b/Categorias/accion/index.html
@@ -75,7 +75,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Godzilla 2: El rey de los Monstruos -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Godzilla contra el terror de los mares -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula759.html">
+    <img src="https://image.tmdb.org/t/p/original/pfHyPPlxY3FYrHCt4NoUryPLwJV.jpg" alt="Godzilla contra el terror de los mares" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Godzilla contra el terror de los mares</div>
+  <div class="text-xs text-white/70">1966</div>
+</article><!-- Godzilla 2: El rey de los Monstruos -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula757.html">
     <img src="https://image.tmdb.org/t/p/original/yQ59NPwzHE2XlYwU2VwHF9Wb0IJ.jpg" alt="Godzilla 2: El rey de los Monstruos" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
