Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Las Aventuras de Pinocho -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Godzilla contra el terror de los mares -->
+<li>
+  <a href="../Peliculas/pelicula759.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/pfHyPPlxY3FYrHCt4NoUryPLwJV.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Godzilla contra el terror de los mares 1966</span>
+    <span class="hidden">Una misteriosa isla ha sido colonizada por una extraña organización terrorista de tintes comunistas llamada Red Bamboo, que ha esclavizado a la población indígena y que se dedica a la fabricación de bombas atómicas. En esta isla vive la langosta gigante Ebirah, que se encarga de devorar a todos aquellos que intentan escapar del lugar, hasta que un rayo despierta a Godzilla, dormido casualmente en el interior de una gruta de la isla.</span>
+  </a>
+</li>
+<!--FIN--><!-- Las Aventuras de Pinocho -->
 <li>
   <a href="../Peliculas/pelicula758.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
