Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Godzilla contra el terror de los mares -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La Guerra De Los Monstruos -->
+<li>
+  <a href="../Peliculas/pelicula760.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/4LVr52X77GZqwad5g1VWEWuh5I1.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La Guerra De Los Monstruos 1968</span>
+    <span class="hidden">En 1999, la UNSC (United Nations Scientific Council) ha reunido a todos los grandes monstruos en una zona de la isla de Ogasawara denominada Monsterland, con el objetivo de estudiarlos a fondo, controlándolos mediante un complejo campo electromagnético. Entre los monstruos kaijus se encuentran nada menos que: Godzilla, Mothra, Ghidorah, Rodan, Baragon, Varan, Kumonga, Manda, Minilla, Gorosaurus y Anguirus. Sin embargo los Kilaaks, una raza extraterrestre, pretende esclavizar la Tierra y boicotea los sistemas de comunicación de la isla y controla mentalmente a los monstruos, que se lanzan a una frenética carrera de destrucción por todo el mundo.</span>
+  </a>
+</li>
+<!--FIN--><!-- Godzilla contra el terror de los mares -->
 <li>
   <a href="../Peliculas/pelicula759.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
