Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La Guerra De Los Monstruos -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Godzilla vs. Gigan -->
+<li>
+  <a href="../Peliculas/pelicula761.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/zeq1UnYWZeTSJdmHIAkHG7Rdc9M.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Godzilla vs. Gigan 1972</span>
+    <span class="hidden">Godzilla y Angorus pelean contra el dragón de tres cabezas Ghidrah y contra el enorme pájaro Gigan en el parque temático de un caricaturista.</span>
+  </a>
+</li>
+<!--FIN--><!-- La Guerra De Los Monstruos -->
 <li>
   <a href="../Peliculas/pelicula760.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
