--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -100,7 +100,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/zeq1UnYWZeTSJdmHIAkHG7Rdc9M.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Godzilla vs. Gigan 1972</span>
-    <span class="hidden">Godzilla y Angorus pelean contra el dragón de tres cabezas Ghidrah y contra el enorme pájaro Gigan en el parque temático de un caricaturista.</span>
+    <span class="hidden">Galien, el monstruo de las galaxias ataca la Tierra versus contra vs Godzilla y Angorus pelean contra el dragón de tres cabezas Ghidrah y contra el enorme pájaro Gigan en el parque temático de un caricaturista.</span>
   </a>
 </li>
 <!--FIN--><!-- La Guerra De Los Monstruos -->
@@ -109,7 +109,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/4LVr52X77GZqwad5g1VWEWuh5I1.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">La Guerra De Los Monstruos 1968</span>
-    <span class="hidden">En 1999, la UNSC (United Nations Scientific Council) ha reunido a todos los grandes monstruos en una zona de la isla de Ogasawara denominada Monsterland, con el objetivo de estudiarlos a fondo, controlándolos mediante un complejo campo electromagnético. Entre los monstruos kaijus se encuentran nada menos que: Godzilla, Mothra, Ghidorah, Rodan, Baragon, Varan, Kumonga, Manda, Minilla, Gorosaurus y Anguirus. Sin embargo los Kilaaks, una raza extraterrestre, pretende esclavizar la Tierra y boicotea los sistemas de comunicación de la isla y controla mentalmente a los monstruos, que se lanzan a una frenética carrera de destrucción por todo el mundo.</span>
+    <span class="hidden">invasion invacion extraterrestre godzilla En 1999, la UNSC (United Nations Scientific Council) ha reunido a todos los grandes monstruos en una zona de la isla de Ogasawara denominada Monsterland, con el objetivo de estudiarlos a fondo, controlándolos mediante un complejo campo electromagnético. Entre los monstruos kaijus se encuentran nada menos que: Godzilla, Mothra, Ghidorah, Rodan, Baragon, Varan, Kumonga, Manda, Minilla, Gorosaurus y Anguirus. Sin embargo los Kilaaks, una raza extraterrestre, pretende esclavizar la Tierra y boicotea los sistemas de comunicación de la isla y controla mentalmente a los monstruos, que se lanzan a una frenética carrera de destrucción por todo el mundo.</span>
   </a>
 </li>
 <!--FIN--><!-- Godzilla contra el terror de los mares -->
@@ -118,7 +118,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/pfHyPPlxY3FYrHCt4NoUryPLwJV.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Godzilla contra el terror de los mares 1966</span>
-    <span class="hidden">Una misteriosa isla ha sido colonizada por una extraña organización terrorista de tintes comunistas llamada Red Bamboo, que ha esclavizado a la población indígena y que se dedica a la fabricación de bombas atómicas. En esta isla vive la langosta gigante Ebirah, que se encarga de devorar a todos aquellos que intentan escapar del lugar, hasta que un rayo despierta a Godzilla, dormido casualmente en el interior de una gruta de la isla.</span>
+    <span class="hidden">los monstruos del mar Una misteriosa isla ha sido colonizada por una extraña organización terrorista de tintes comunistas llamada Red Bamboo, que ha esclavizado a la población indígena y que se dedica a la fabricación de bombas atómicas. En esta isla vive la langosta gigante Ebirah, que se encarga de devorar a todos aquellos que intentan escapar del lugar, hasta que un rayo despierta a Godzilla, dormido casualmente en el interior de una gruta de la isla.</span>
   </a>
 </li>
 <!--FIN--><!-- Las Aventuras de Pinocho -->
