--- a/Categorias/sci-fi&fantasy/index.html
+++ b/Categorias/sci-fi&fantasy/index.html
@@ -50,7 +50,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- The Umbrella Academy -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Juego de Tronos -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Series/serie84.html">
+    <img src="https://image.tmdb.org/t/p/original/z9gCSwIObDOD2BEtmUwfasar3xs.jpg" alt="Juego de Tronos" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Juego de Tronos</div>
+  <div class="text-xs text-white/70">2011</div>
+</article><!-- The Umbrella Academy -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Series/serie80.html">
     <img src="https://image.tmdb.org/t/p/original/5rhtcR1xl1tSmH3FcMH3IJ8gNGC.jpg" alt="The Umbrella Academy" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
