Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Godzilla vs. Gigan -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Juego de Tronos -->
+<li>
+  <a href="../Series/serie84.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/z9gCSwIObDOD2BEtmUwfasar3xs.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Juego de Tronos 2011</span>
+    <span class="hidden">En un mundo fantástico y en un contexto medieval varias familias, relativas a la nobleza, se disputan el poder para dominar el territorio ficticio de Poniente (Westeros) y tomar el control de los Siete Reinos desde el Trono de Hierro, lugar donde el rey ejerce el poder.</span>
+  </a>
+</li>
+<!--FIN--><!-- Godzilla vs. Gigan -->
 <li>
   <a href="../Peliculas/pelicula761.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
