--- a/Categorias/serie/index.html
+++ b/Categorias/serie/index.html
@@ -810,7 +810,7 @@
 
 <!-- Tulsa King -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie8.html">
+  <a href="../../Series/serie8.html">
     <img src="https://image.tmdb.org/t/p/original/yzRnj5GMZEjiW9xTGkz8cVNyzH9.jpg" alt="Tulsa King" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -823,7 +823,7 @@
 
 <!-- Cyberpunk: Edgerunners -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie7.html">
+  <a href="../../Series/serie7.html">
     <img src="https://image.tmdb.org/t/p/original/rNkilVmALgaIb4SenfbaecRStDD.jpg" alt="Cyberpunk: Edgerunners" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -836,7 +836,7 @@
 
 <!-- Subteran -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie6.html">
+  <a href="../../Series/serie6.html">
     <img src="https://image.tmdb.org/t/p/original/3Yp9XPBtNGJNkwAWwyTHJSXy962.jpg" alt="Subteran" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -849,7 +849,7 @@
 
 <!-- Comando de Criaturas -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie5.html">
+  <a href="../../Series/serie5.html">
     <img src="https://image.tmdb.org/t/p/original/zVC3YIA8C3Lyf30UGVRaxrBW3GE.jpg" alt="Comando de Criaturas" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -862,7 +862,7 @@
 
 <!-- Alien: Earth -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie4.html">
+  <a href="../../Series/serie4.html">
     <img src="https://image.tmdb.org/t/p/original/8IIPZe4V2xNYFWY7lBY6GpN2L8O.jpg" alt="Alien: Earth" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -875,7 +875,7 @@
 
 <!-- INVENCIBLE -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie3.html">
+  <a href="../../Series/serie3.html">
     <img src="https://image.tmdb.org/t/p/original/zCgPbsPJ7d1qlXVn1cKvTlcob1H.jpg" alt="INVENCIBLE" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
@@ -888,7 +888,7 @@
 
 <!-- Moon Knight -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
-  <a href="https://lz.blogdepelis.lat/Series/serie2.html">
+  <a href="../../Series/serie2.html">
     <img src="https://image.tmdb.org/t/p/original/5AHnvXfW0mtsm047OP54n4pnV0R.jpg" alt="Moon Knight" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
     <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
       Serie
