--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -100,7 +100,7 @@
    <img 
   src="https://image.tmdb.org/t/p/original/6B7AaxdGIxl5gPKM9esqnRcFdX0.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Tempest 2025</span>
-    <span class="hidden">Tras un intento de asesinato al candidato presidencial, la exdiplomática Munju Seo rebusca en su pasado y descubre una conspiración internacional en la que participan países, agencias de seguridad y servicios de inteligencia que ponen en riesgo la estabilidad de la península coreana. Mientras ella se juega la vida, un mercenario misterioso llamado Sanho Paik se ofrece para mantenerla a salvo. ¿Debería confiar Munju en él con lo poco que sabe de él?</span>
+    <span class="hidden">polaris la conspiracion Tras un intento de asesinato al candidato presidencial, la exdiplomática Munju Seo rebusca en su pasado y descubre una conspiración internacional en la que participan países, agencias de seguridad y servicios de inteligencia que ponen en riesgo la estabilidad de la península coreana. Mientras ella se juega la vida, un mercenario misterioso llamado Sanho Paik se ofrece para mantenerla a salvo. ¿Debería confiar Munju en él con lo poco que sabe de él?</span>
   </a>
 </li>
 <!--FIN--><!-- Juego de Tronos -->
