--- a/Categorias/comedia/index.html
+++ b/Categorias/comedia/index.html
@@ -47,7 +47,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- King Kong contra Godzilla -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Diario de una chica experta en desastres de amor -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Series/serie86.html">
+    <img src="https://image.tmdb.org/t/p/original/8kvE7FgLP6Flh88dZ7UqHkjAXsz.jpg" alt="Diario de una chica experta en desastres de amor" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Diario de una chica experta en desastres de amor</div>
+  <div class="text-xs text-white/70">2025</div>
+</article><!-- King Kong contra Godzilla -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula752.html">
     <img src="https://image.tmdb.org/t/p/original/m5x0lEpwN5m0VDvpdKeLESXspgf.jpg" alt="King Kong contra Godzilla" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
