--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Tempest -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Diario de una chica experta en desastres de amor -->
+<li>
+  <a href="../Series/serie86.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/8kvE7FgLP6Flh88dZ7UqHkjAXsz.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Diario de una chica experta en desastres de amor 2025</span>
+    <span class="hidden">Amanda, de 31 años, y sus amigas, conocen a una amplia variedad de hombres mientras se enfrentan a la complejidad de las citas modernas en bares y apps.</span>
+  </a>
+</li>
+<!--FIN--><!-- Tempest -->
 <li>
   <a href="../Series/serie85.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
