--- a/Series/serie86.html
+++ b/Series/serie86.html
@@ -89,7 +89,7 @@ var serieActual = {
   poster: "https://image.tmdb.org/t/p/original/8kvE7FgLP6Flh88dZ7UqHkjAXsz.jpg"
 };
 
-var videosPorCapitulo = {"1":{"1":"https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/j7ico32k2qjt","2":"https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/9c278q83hh8z","3":"https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/f616n6eg7bvv","4":"https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/u753vg7g295g","5":"https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/u1k1su3mqdku","6":"https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/k8k73ld55oid","7":"https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/5e3ussbiz579"}};
+var videosPorCapitulo = {"1":{"1":"https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/13kvx5rp4o7x","2":"https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/9c278q83hh8z","3":"https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/f616n6eg7bvv","4":"https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/u753vg7g295g","5":"https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/u1k1su3mqdku","6":"https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/k8k73ld55oid","7":"https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/5e3ussbiz579"}};
 
 function guardarTemporada(temporada) {
   localStorage.setItem("temporadaSeleccionada_" + serieId, temporada);
