--- a/Categorias/animacion/index.html
+++ b/Categorias/animacion/index.html
@@ -76,7 +76,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Frozen 2 -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Gods Games We Play -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Series/serie87.html">
+    <img src="https://image.tmdb.org/t/p/original/eYI68Qz9z9k2tF83I0omuvsSMDw.jpg" alt="Gods Games We Play" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Gods Games We Play</div>
+  <div class="text-xs text-white/70">2024</div>
+</article><!-- Frozen 2 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula746.html">
     <img src="https://image.tmdb.org/t/p/original/jnFCk7qGGWop2DgfnJXeKLZFuBq.jpg" alt="Frozen 2" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
