--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Diario de una chica experta en desastres de amor -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Gods Games We Play -->
+<li>
+  <a href="../Series/serie87.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/eYI68Qz9z9k2tF83I0omuvsSMDw.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Gods Games We Play 2024</span>
+    <span class="hidden">En un mundo de dioses sin nada que hacer, los humanos se ven forzados a aceptar los retos que estos les proponen. Tras tres derrotas, los dioses pierden su derecho a seguir retándoles, mientras que los humanos deben vencer diez veces para alzarse con el triunfo. Faye está decidido a conseguir lo imposible y se lanza de cabeza a la batalla de ingenio definitiva contra los dioses. ¿Conseguirá superar a los dioses o será uno más en la lista de derrotados?</span>
+  </a>
+</li>
+<!--FIN--><!-- Diario de una chica experta en desastres de amor -->
 <li>
   <a href="../Series/serie86.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
