--- a/Categorias/serie/index.html
+++ b/Categorias/serie/index.html
@@ -49,7 +49,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Gods Games We Play -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Las Hermanas -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Series/serie88.html">
+    <img src="https://image.tmdb.org/t/p/original/wiiwaOjm9QmSHH5FdIbtVLRrZMG.jpg" alt="Las Hermanas" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Las Hermanas</div>
+  <div class="text-xs text-white/70">2022</div>
+</article><!-- Gods Games We Play -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Series/serie87.html">
     <img src="https://image.tmdb.org/t/p/original/eYI68Qz9z9k2tF83I0omuvsSMDw.jpg" alt="Gods Games We Play" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
