--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Gods Games We Play -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Las Hermanas -->
+<li>
+  <a href="../Series/serie88.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/wiiwaOjm9QmSHH5FdIbtVLRrZMG.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Las Hermanas 2022</span>
+    <span class="hidden">Faltan 70.000 millones de wones para tres hermanas que crecieron en la pobreza absoluta pero con un vínculo estrecho.  Enredadas en una conspiración que involucra a ricos y poderosos, tres hermanas que querían vivir como todos los demás se enfrentan a una tarea de vida, ya sea para quedarse con el dinero o para devolverlo.</span>
+  </a>
+</li>
+<!--FIN--><!-- Gods Games We Play -->
 <li>
   <a href="../Series/serie87.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
