Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Las Hermanas -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La voragine -->
+<li>
+  <a href="../Series/serie89.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/niabu7iVMCier4vtIGMR5r5Xm1Y.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">La vorágine 2024</span>
+    <span class="hidden">La batalla campal entre el primer ministro y la vice primera ministra se desata el día en que el presidente sufre un intento de asesinato.</span>
+  </a>
+</li>
+<!--FIN--><!-- Las Hermanas -->
 <li>
   <a href="../Series/serie88.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
