Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- La voragine -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Death Note -->
+<li>
+  <a href="../Series/serie90.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/chnG4pYo89weaBjXHJWvW68E35B.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Death Note 2006</span>
+    <span class="hidden">Light Yagami es un as estudiante con grandes perspectivas, y está aburrido de su mente. Pero todo eso cambia cuando encuentra la Nota de la Muerte, un cuaderno caído por un malvado dios Shinigami. Todo ser humano cuyo nombre está escrito en el cuaderno muere, y Luz ha prometido usar el poder de la Nota de la Muerte para librar al mundo del mal. ¿Pero la Luz tendrá éxito en su noble meta, o la Nota de la Muerte lo convertirá en la misma cosa contra la que lucha?</span>
+  </a>
+</li>
+<!--FIN--><!-- La voragine -->
 <li>
   <a href="../Series/serie89.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
