--- a/Categorias/crimen/index.html
+++ b/Categorias/crimen/index.html
@@ -78,7 +78,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Doble Impacto -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- El negocio de las drogas -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Series/serie91.html">
+    <img src="https://image.tmdb.org/t/p/original/blyObONhcnleib1xqcwS9uvAfIM.jpg" alt="El negocio de las drogas" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">El negocio de las drogas</div>
+  <div class="text-xs text-white/70">2020</div>
+</article><!-- Doble Impacto -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula728.html">
     <img src="https://image.tmdb.org/t/p/original/8xoizvqv9k0Am1vNQrTHkVFXzBE.jpg" alt="Doble Impacto" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
