--- a/Categorias/serie/index.html
+++ b/Categorias/serie/index.html
@@ -49,7 +49,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Death Note -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- El negocio de las drogas -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Series/serie91.html">
+    <img src="https://image.tmdb.org/t/p/original/blyObONhcnleib1xqcwS9uvAfIM.jpg" alt="El negocio de las drogas" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">El negocio de las drogas</div>
+  <div class="text-xs text-white/70">2020</div>
+</article><!-- Death Note -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Series/serie90.html">
     <img src="https://image.tmdb.org/t/p/original/chnG4pYo89weaBjXHJWvW68E35B.jpg" alt="Death Note" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
