--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El negocio de las drogas -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Match: La reina de las apps de citas -->
+<li>
+  <a href="../Peliculas/pelicula762.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/jKFxwLHiqncNSG1VFliTlf61r9s.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Match: La reina de las apps de citas 2025</span>
+    <span class="hidden">Inspirada en la historia de Whitney Wolfe Herd, fundadora y ex CEO de la plataforma de citas Bumble.</span>
+  </a>
+</li>
+<!--FIN--><!-- El negocio de las drogas -->
 <li>
   <a href="../Series/serie91.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
