--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Match: La reina de las apps de citas -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Godzilla 2 -->
+<li>
+  <a href="../Peliculas/pelicula763.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/3twE5Btcw061WnswGqYMNqBYQ2E.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Godzilla 2 1955</span>
+    <span class="hidden">Godzilla, resucitada por arte de magia tras su muerte al final del primer título, se enfrenta esta vez a un nuevo monstruo, Anguilas, un extraño gigante cuadrúpedo acorazado, y tras destruir parcialmente la ciudad de Osaka, acaba enterrada en el hielo de una pequeña isla a causa de los bombardeos de los aviones del ejército japonés. Segunda película de la saga Godzilla.</span>
+  </a>
+</li>
+<!--FIN--><!-- Match: La reina de las apps de citas -->
 <li>
   <a href="../Peliculas/pelicula762.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
