Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Uma Advogada Brilhante -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Delfines en primer plano con Bertie Gregory -->
+<li>
+  <a href="../Peliculas/pelicula765.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/kbCZnT5qXL6xKz3Z0cskB21bR13.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Delfines en primer plano con Bertie Gregory 2025</span>
+    <span class="hidden">Bertie Gregory se dirige a las Azores, un santuario marino vital y un punto de encuentro estacional para los depredadores oceánicos migratorios. Durante la temporada de alimentación, miles de esquivos cazadores se reúnen para darse un festín con enormes bolas de cebo. Enfrentándose a tormentas y escudriñando vastos mares, Bertie corre a contrarreloj para capturar el frenesí alimenticio más épico de su carrera.</span>
+  </a>
+</li>
+<!--FIN--><!-- Uma Advogada Brilhante -->
 <li>
   <a href="../Peliculas/pelicula764.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
