Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Delfines en primer plano con Bertie Gregory -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Gatillero -->
+<li>
+  <a href="../Peliculas/pelicula766.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/moiLQPK2YjritOYG674DrWHvlgp.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Gatillero 2025</span>
+    <span class="hidden">Una cruda historia de tragedia y redención, contada a través de un único plano continuo. Rodada en la verdadera Isla Maciel, en las afueras de Buenos Aires, Argentina.</span>
+  </a>
+</li>
+<!--FIN--><!-- Delfines en primer plano con Bertie Gregory -->
 <li>
   <a href="../Peliculas/pelicula765.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
