--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Gatillero -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El padel es nuestro -->
+<li>
+  <a href="../Peliculas/pelicula767.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/6KFOfT40Kh0SJEEq1tuuowPEXG9.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El pádel es nuestro 2025</span>
+    <span class="hidden">Ellos lo amaban. Sus esposas lo odiaban… hasta que ellas también empezaron a jugar. ¿Quién ganará esta batalla en la cancha (y en la casa)?</span>
+  </a>
+</li>
+<!--FIN--><!-- Gatillero -->
 <li>
   <a href="../Peliculas/pelicula766.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
