--- a/Categorias/aventura/index.html
+++ b/Categorias/aventura/index.html
@@ -79,7 +79,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Godzilla vs. Gigan -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mision: Imposible -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula768.html">
+    <img src="https://image.tmdb.org/t/p/original/xCpmxw3UUjv4PGzbIPOHeoKAV0l.jpg" alt="Misión: Imposible" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Misión: Imposible</div>
+  <div class="text-xs text-white/70">1996</div>
+</article><!-- Godzilla vs. Gigan -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula761.html">
     <img src="https://image.tmdb.org/t/p/original/zeq1UnYWZeTSJdmHIAkHG7Rdc9M.jpg" alt="Godzilla vs. Gigan" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
