--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mision: Imposible -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mision: Imposible 2 -->
+<li>
+  <a href="../Peliculas/pelicula769.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/mskE3W88cjMRrnKQye8pjmJu3O1.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Misión: Imposible 2 2000</span>
+    <span class="hidden">El agente del FMI Ethan Hunt es enviado a Sydney para encontrar y destruir una enfermedad genéticamente modificada llamada «Quimera».</span>
+  </a>
+</li>
+<!--FIN--><!-- Mision: Imposible -->
 <li>
   <a href="../Peliculas/pelicula768.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
