Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mision: Imposible 2 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mision: Imposible 3 -->
+<li>
+  <a href="../Peliculas/pelicula770.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/w61xBgFOfP8Z6uHKIKn1sl1TI8j.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Misión: Imposible 3 2006</span>
+    <span class="hidden">El agente del FMI Ethan Hunt entra en conflicto con un peligroso y sádico traficante de armas que, en respuesta, amenaza su vida y la de su prometida.</span>
+  </a>
+</li>
+<!--FIN--><!-- Mision: Imposible 2 -->
 <li>
   <a href="../Peliculas/pelicula769.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
