Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mision: Imposible 3 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mision Imposible 4: Protocolo fantasma -->
+<li>
+  <a href="../Peliculas/pelicula771.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/y0hjsPyieqxcunEcAxb9mrrE09c.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Misión Imposible 4: Protocolo fantasma 2011</span>
+    <span class="hidden">El FMI es clausurado cuando está implicado en el atentado del Kremlin, lo que hace que Ethan Hunt y su nuevo equipo se vuelvan rebeldes para limpiar el nombre de su organización.</span>
+  </a>
+</li>
+<!--FIN--><!-- Mision: Imposible 3 -->
 <li>
   <a href="../Peliculas/pelicula770.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
