Crear/Actualizar SEARCH/index.html

--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -94,7 +94,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mision Imposible 4: Protocolo fantasma -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mision Imposible 5: Nacion Secreta -->
+<li>
+  <a href="../Peliculas/pelicula772.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/q5twcJdIx9Swtl7CyzfvgQckWVK.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Misión Imposible 5: Nación Secreta 2015</span>
+    <span class="hidden">Ethan y su equipo se enfrentan a su misión más imposible hasta el momento cuando tienen que erradicar una organización internacional de delincuentes tan hábil como ellos y comprometida con la destrucción del FMI.</span>
+  </a>
+</li>
+<!--FIN--><!-- Mision Imposible 4: Protocolo fantasma -->
 <li>
   <a href="../Peliculas/pelicula771.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
